--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.entry.wepapp.rest</param-value>
+			<param-value>com.entry.webapp.rest</param-value>
 		</init-param>
 		
 		<init-param>
